# FaceScanTracker

./: README.md  app.py  attendance.json  classes.json  enrollments.json  face_utils.py  models.py  pyproject.toml  replit.nix
static/css/: style.css
static/js/: analytics.js  attendance.js  camera.js  classes.js  enrollment.js
templates/: analytics.html  attendance.html  chatbot.html  classes.html  enrollment.html  index.html  layout.html  records.html
